# odp-platform-radxa-orion-o6

./: .gitattributes  .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  DxeMain-vs-PatinaDxeCore-Security-Analysis.md  LICENSE  LICENSE.txt  LogoFAIL-Analysis-vs-Rust-Implementation.md  LogoFAIL_Rust_UEFI_Demo_Notes.md  LogoFAIL_Rust_UEFI_Demo_Notes_v2.md  Makefile  NOTICE  NOTICE.txt  README.md  Rust-vs-C-DXE-Core-Value-Analysis.md  acpica.patch  build_and_package.sh  d.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/: README-github.md  dependabot.yml
.github/workflows/: bootchain_build.yml  bootchain_debug_build.yml  bootchain_release_build.yml  build.yml  build_bootchain.yml  build_debug_bootchain.yml  build_os_image.yml  build_release_bootchain.yml  container_build.yml  os_build.yml  publish_boot_stack.yml  publish_container.yml  publish_release_image.yml  release_publish.yml  run_tests.yml  test.yml  unit_tests_all.yml
bin-mem_config/: Makefile
bin-pm_config/: Makefile
bin-tee/: Makefile
bin-tf-a/: Makefile
bin-uefi/: Makefile
bin-uefi/platform/: O6.dsc
bin-uefi/platform/Drivers/PatinaDxeCore_ru/: Cargo.toml
bin-uefi/platform/Drivers/PatinaDxeCore_ru/.cargo/: config.toml
bin-uefi/platform/OVERRIDE/Platform/CIX/Sky1/: Sky1Common.dsc.inc
bin-uefi/platform/OVERRIDE/patina_dxe_core/: Cargo.toml
bin-uefi/platform/OVERRIDE/patina_dxe_core/src/cpu/: cpu_arch_protocol.rs
bin-uefi/platform/OVERRIDE/patina_internal_cpu/: Cargo.toml
bin-uefi/platform/OVERRIDE/patina_internal_cpu/src/: cpu.rs
bin-uefi/platform/OVERRIDE/patina_internal_cpu/src/cpu/: aarch64.rs  x64.rs
bin-uefi/platform/OVERRIDE/patina_internal_cpu/src/interrupts/x64/: idt.rs
bootchain/: Makefile  README.md
bootchain/modules/mem_config/: Makefile  README.md
bootchain/modules/pm_config/: Makefile  README.md
bootchain/modules/secure-services/platform/: Cargo.toml
bootchain/modules/secure-services/platform/linker/: orion-o6-ec-sp.dts
bootchain/modules/secure-services/platform/src/baremetal/: interrupt.rs
bootchain/modules/tee/: README.md
bootchain/modules/tf-a/: README.md
bootchain/modules/uefi/: Makefile  README.md
bootchain/modules/uefi/platform/: O6.dsc  O6.fdf
bootchain/modules/uefi/platform/Drivers/PatinaDxeCore_ru/: rust-toolchain.toml  rustfmt.toml
common/: README.md  spi_flash_config_all.json  spi_flash_config_ota.json
common/tests/acpi/: .gitignore  Cargo.toml
common/tests/acpi/src/: main.rs
common/tools/: download-gnu-toolchain  download-gnu-toolchain.sh  enter-container.sh  nuget_release_project.csproj  nuget_version.sh  prepare_release.py  upload_nuget_artifact.sh
docs/: Building-and-loading-Source-(Old).md  OS-NVME-Install.md  build_details.md  platform_details.md
image-bootchain/: Makefile  README.md
image-os/: README.md
mem_config/: Makefile  build.sh
mod/mem_config/: Makefile  README.md
mod/pm_config/: Makefile  README.md
mod/secure-services/: Makefile
mod/secure-services/.cargo/: config.toml
mod/secure-services/platform/: Cargo.toml  build.rs
mod/secure-services/platform/linker/: image.ld  orion-o6.ld
mod/secure-services/platform/src/: main.rs
mod/secure-services/platform/src/baremetal/: interrupt.rs  mod.rs  panic.rs  uart.rs
mod/secure-services/platform/src/baremetal/services/: battery.rs  mod.rs  (+3 more)
mod/tee/: Makefile  README.md
mod/tf-a/: Makefile  README.md
mod/uefi/: .gitignore  Makefile  README.md
mod/uefi/platform/: O6.dsc  O6.fdf
mod/uefi/platform/Drivers/PatinaDxeCore_ru/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
mod/uefi/platform/Drivers/PatinaDxeCore_ru/.cargo/: config.toml
mod/uefi/platform/Drivers/PatinaDxeCore_ru/src/: lib.rs  main.rs
os_image/: README.md
pm_config/: Makefile  README.md  build.sh
postbuild/bootchain/: Makefile  README.md  bootchain.csproj  upload_nuget_artifact.sh
postbuild/os/: O6_config.pkg  O6_policy.reg  README.md  build_wim.cmd
tee/: Makefile  build.sh
tests/acpi/: Cargo.toml
tests/acpi/src/: main.rs
tf-a/: Makefile  build.sh
uefi/: Makefile  build.sh
uefi/platform/: O6.dsc  O6.fdf
uefi/platform/Drivers/PatinaDxeCore_ru/: Cargo.toml  README.md
uefi/platform/Drivers/PatinaDxeCore_ru/src/: lib.rs  main.rs
(+16 files in other folders)
