# Local override of patina_internal_cpu for DMA buffer alignment fix.
# Based on patina_internal_cpu v20.1.3 from crates.io.

[package]
name = "patina_internal_cpu"
version = "20.1.3"
edition = "2024"
readme = "README.md"
description = "CPU support."
license = "Apache-2.0"
repository = "https://github.com/OpenDevicePartnership/patina"

[lints.clippy]
undocumented_unsafe_blocks = "warn"

[package.metadata.docs.rs]
features = ["doc", "std"]

[lib]
name = "patina_internal_cpu"
path = "src/lib.rs"

[dependencies]
lazy_static = { version = "^1", features = ["spin_no_std"] }
log = { version = "0.4", default-features = false }
r-efi = { version = "5.0.0", default-features = false }
patina = { version = "20.1.3" }
spin = { version = "^0.9", features = ["rwlock"] }
patina_paging = { version = "11.0.2" }
cfg-if = { version = "1" }
patina_stacktrace = { version = "20.1.3" }

[target.'cfg(all(target_arch="x86_64"))'.dependencies]
x86_64 = { version = "=0.15.2", default-features = false, features = [
    "instructions",
    "abi_x86_interrupt",
] }
patina_mtrr = { version = "^1.1.4" }

[target.'cfg(all(target_arch="aarch64"))'.dependencies]
arm-gic = { version = "0.7.2" }
safe-mmio = { version = "0.2.5" }

[dev-dependencies]
x86_64 = { version = "=0.15.2", default-features = false, features = [
    "instructions",
    "abi_x86_interrupt",
] }
mockall = { version = "0.13.0" }
serial_test = { version = "3.0" }

[features]
default = []
std = []
doc = []
