# Cargo package manifest for the Patina DXE Core driver (Radxa O6)
#
# SPDX-License-Identifier: MIT
#

[package]
  name = "dxe_core"
  version = "2.0.3"
  edition = "2024"
  license = "MIT"

[dependencies]
  log = "^0.4"
  heapless = "0.9.1"

[target.'cfg(target_os = "uefi")'.dependencies]
  patina = "21.0.3"
  patina_dxe_core = "21.0.3"
  patina_ffs_extractors = "21.0.3"

[profile.dev]
  opt-level = "s"

[profile.test]
  opt-level = 0

[features]
  default = ["compatibility_mode_allowed"]
  compatibility_mode_allowed = ["patina_dxe_core/compatibility_mode_allowed"]
